--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </a>
             </ul>
             <div class="footer">
-                <a href="tel:+61481368010" tooltip="+61481368010">
+                <a href="tel:+61481909293" tooltip="+61481909293">
                     <span class="ion-ios-telephone"></span>
                 </a>
                 <a href="mailto:mujeebrahmanmv@gmail.com" tooltip="mujeebrahmanmv@gmail.com">
@@ -58,7 +58,7 @@
                 </a>
             </div>
             <div class="copyright">
-                @2017 MujeebRahman - all rights reserved
+                @2020 MujeebRahman - all rights reserved
             </div>
         </div>
     </nav>
@@ -94,7 +94,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Over 9 years experience in Web/Mobile application development.
+                                <strong> Over 12 years experience in Web/Mobile application development.
 
 </strong>
                             </div>
@@ -103,7 +103,7 @@
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
                                 <strong>
-  Almost 4 years experience in Single page application development using Angular
+  Almost 7 years experience in Single page application development using Angular
 2/4, AngularJs, Knockout JS
 
 
@@ -162,25 +162,26 @@
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 90%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-angular"></span> AngularJs</div>
+                            <div class="title"><span class="ion-social-angular"></span> AngularJS</div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 80%"></div>
                             </div>
+                            
                             <div class="title"><span class="ion-social-angular"></span> Angular 2</div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 70%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-angular"></span> Durandal</div>
+                            <div class="title"><span class="ion-social-javascript"></span> ReactJS</div>
+                            <div class="progress-bar">
+                                <div class="progress color-2" style="width: 60%"></div>
+                            </div>
+                            <div class="title"><span class="ion-social-javascript"></span> Durandal</div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 85%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-javascript"></span> Knockout.js</div>
+                            <div class="title"><span class="ion-social-javascript"></span> KnockoutJS</div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 70%"></div>
-                            </div>
-                            <div class="title"><span class="ion-social-javascript"></span> JQuery</div>
-                            <div class="progress-bar">
-                                <div class="progress color-2" style="width: 75%"></div>
                             </div>
                         </div>
                     </div>
@@ -195,9 +196,9 @@
                             <div class="progress-bar">
                                 <div class="progress" style="width: 50%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-nodejs"></span>Nodejs</div>
+                            <div class="title"><span class="ion-social-nodejs"></span>Nodejs/Express</div>
                             <div class="progress-bar">
-                                <div class="progress" style="width: 50%"></div>
+                                <div class="progress" style="width: 60%"></div>
                             </div>
                             <h3></h3>
                             <h3>Software developement models</h3>
@@ -273,14 +274,16 @@
                                     Tata Consultancy Services | Sydney, Australia
                                 </p>
                                 <p class="content">
-                                    As a senior UI developer my role was to deliver quality applications. I am the only one UI developer in the current scrum team. We delivered uplifted Expense Splitter and Common Report Service.
+                                    As a senior UI developer my role was to deliver quality applications. I am the only one UI developer in the current scrum team. We delivered uplifted Expense Splitter, St. George Digital Mortgage, My every day Banking  and Common Report Service.
 
                                 </p>
                                 <p class="content">
                                     <i>
                                         <span class="f">HTML5/CSS3/JavaScript</span>
                                         <span class="f">Durandal</span>
-                                        <span class="f">Knockout.js</span>
+                                        <span class="f">KnockoutJS</span>
+                                        <span class="f">ReactJS</span>
+                                        <span class="f">Redux Saga</span>
                                         <span class="b">Typescript</span>
                                         <span class="t">JIRA</span>
                                         <span class="t">Twitter Bootstrap</span>
@@ -592,9 +595,9 @@
                         <div class="l-box">
                             <span class="icon ion-ios-location "></span>
                             <span class="content ">
-                                <div>6/152 Queen Victoria St</div>
-                                <div>Bexley</div>
-                                <div>NSW 2207, Australia</div>
+                                <div>8/4 Guinea St</div>
+                                <div>Kogarah</div>
+                                <div>NSW 2217, Australia</div>
                             </span>
                         </div>
                     </div>
