--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> Over 12 years experience in Web/Mobile application development.
+                                <strong> Over 13 years experience in Web/Mobile application development.
 
 </strong>
                             </div>
@@ -103,9 +103,8 @@
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
                                 <strong>
-  Almost 7 years experience in Single page application development using Angular
-2/4, AngularJs, Knockout JS
-
+  Almost 9 years experience in Single page application development using Angular
+2/4, AngularJs, KnockoutJs, DurandalJs, NodeJs, ReactJs
 
 </strong>
                             </div>
@@ -173,7 +172,7 @@
                             </div>
                             <div class="title"><span class="ion-social-javascript"></span> ReactJS</div>
                             <div class="progress-bar">
-                                <div class="progress color-2" style="width: 60%"></div>
+                                <div class="progress color-2" style="width: 65%"></div>
                             </div>
                             <div class="title"><span class="ion-social-javascript"></span> Durandal</div>
                             <div class="progress-bar">
@@ -204,11 +203,11 @@
                             <h3>Software developement models</h3>
                             <div class="title"><span class="ion-ios-timer-outline"></span> Agile Scrum</div>
                             <div class="progress-bar">
-                                <div class="progress color-4" style="width: 75%"></div>
+                                <div class="progress color-4" style="width: 95%"></div>
                             </div>
                             <div class="title"><span class="ion-arrow-graph-down-right"></span>Waterfall</div>
                             <div class="progress-bar">
-                                <div class="progress color-4" style="width: 60%"></div>
+                                <div class="progress color-4" style="width: 70%"></div>
                             </div>
                         </div>
 
@@ -218,7 +217,7 @@
                             <h3>Domains</h3>
                             <div class="title"><span class="ion-stats-bars"></span> Data Visualization</div>
                             <div class="progress-bar">
-                                <div class="progress color-5" style="width: 75%"></div>
+                                <div class="progress color-5" style="width: 85%"></div>
                             </div>
                             <div class="title"><span class="ion-ios-flame"></span>Energy</div>
                             <div class="progress-bar">
@@ -226,7 +225,7 @@
                             </div>
                             <div class="title"><span class="ion-cash"></span> Banking </div>
                             <div class="progress-bar">
-                                <div class="progress color-5" style="width: 85%"></div>
+                                <div class="progress color-5" style="width: 95%"></div>
                             </div>
                             <div class="title"><span class="ion-ios-people"></span> Social Networking</div>
                             <div class="progress-bar">
@@ -274,7 +273,7 @@
                                     Tata Consultancy Services | Sydney, Australia
                                 </p>
                                 <p class="content">
-                                    As a senior UI developer my role was to deliver quality applications. I am the only one UI developer in the current scrum team. We delivered uplifted Expense Splitter, St. George Digital Mortgage, My every day Banking  and Common Report Service.
+                                    As a senior UI developer my role is to deliver quality applications. I am the only one UI developer in the current scrum team. We delivered uplifted Expense Splitter, St. George Digital Mortgage, My every day Banking  and Common Report Service. Also I could design and deliver one component for SSO by using PKCE oAuth2 concepts.
 
                                 </p>
                                 <p class="content">
@@ -595,9 +594,9 @@
                         <div class="l-box">
                             <span class="icon ion-ios-location "></span>
                             <span class="content ">
-                                <div>8/4 Guinea St</div>
-                                <div>Kogarah</div>
-                                <div>NSW 2217, Australia</div>
+                                <div>2/30 Gladstone St</div>
+                                <div>Bexley</div>
+                                <div>NSW 2207, Australia</div>
                             </span>
                         </div>
                     </div>
