--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                     Tata Consultancy Services | Sydney, Australia
                                 </p>
                                 <p class="content">
-                                   <p>Customer Service Hub provide seemless and fast customer experience for Mortgage loan applications. This application uses Westpac developement Platform for developement and  Oracle Banking Platform as backend system.  
+                                   <p>Customer Service Hub provide seemless and faster customer experience for Mortgage loan applications. This application uses Westpac developement Platform for developement and  Oracle Banking Platform as backend system.  
                                 </p>
                             
                                 </p>
