--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About Mujeeb Rahman MV">
-    <title>Mujeeb Rahman MV</title>
+    <meta name="description" content="About Mujeeb Rahman Melevilakkathil">
+    <title>Mujeeb Rahman Melevilakkathil</title>
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -18,7 +18,7 @@
 
 <body>
     <nav class="no-print">
-        <a href="#"><img src="assets/img/profile.jpg" width="240" alt=">Mujeeb Rahman MV"></a>
+        <a href="#"><img src="assets/img/profile.jpg" width="240" alt=">Mujeeb Rahman Melevilakkathil"></a>
         <div class="content">
             <ul class="list">
                 <a href="#about">
@@ -65,7 +65,7 @@
     <header id="about">
         <article>
             <div class="title">
-                <h1>Mujeeb Rahman MV</h1>
+                <h1>Mujeeb Rahman Melevilakkathil</h1>
                 <summary>Senior Full Stack Developer</summary>
                 <div class="button-container">
                     <button onclick="window.open('assets/docs/Mujeeb_Rahman_MV.pdf')">Download</button>
