--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class="copyright">
-                @2021 MujeebRahman - all rights reserved
+                @2022 MujeebRahman - all rights reserved
             </div>
         </div>
     </nav>
@@ -84,7 +84,7 @@
                     <div class="pure-u-1">
                         <div class="l-box">
                             A creative technology enthusiast and Senior Full Stack developer with more than 14 years of experience in creating Hybrid Apps and pixel perfect websites. I derive great joy in learning new technologies and providing solutions. I am seeking new challenging
-                            opportunities especially in web technologies that will enable me to acquire new skills.
+                            opportunities, especially in web technologies that will enable me to acquire new skills.
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                     <div class="pure-u-1-2 pure-u-md-1-2 pure-u-lg-1-2 pure-u-xl-1-2">
                         <div class="l-box">
                             <h3>Font-End</h3>
-                            <div class="title"><span class="ion-social-html5"></span> HTML5/CSS3/JavaScript - <strong style="color:#f70054">13 years</strong></div>
+                            <div class="title"><span class="ion-social-html5"></span> HTML5/CSS3/JavaScript - <strong style="color:#f70054">14 years</strong></div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 90%"></div>
                             </div>
@@ -200,7 +200,7 @@
                             <div class="progress-bar">
                                 <div class="progress" style="width: 50%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-nodejs"></span>Nodejs/Express - <strong style="color:#f70054">1 year</strong></div>
+                            <div class="title"><span class="ion-social-nodejs"></span>Nodejs/Express/GraphQL - <strong style="color:#f70054">2 years</strong></div>
                             <div class="progress-bar">
                                 <div class="progress" style="width: 60%"></div>
                             </div>
@@ -326,7 +326,7 @@
                             <span class="icon ion-ios-calendar "></span>
                             <div class=" content ">
                                 <summary>Sep 2021 -  CURRENT</summary>
-                                <h3>National Austrlia Bank - Solution designer| Front-end dev lead</h3>
+                                <h3>National Australia Bank - Solution designer| Front-end dev lead</h3>
                                 <p>
                                     Accenture | Sydney, Australia
                                 </p>
@@ -340,6 +340,7 @@
                                         <span class="f">HTML5/CSS3/JavaScript</span>
                                         <span class="f">React</span>
                                         <span class="f">GraphQL</span>
+                                        <span class="f">NodeJS</span>
                                         <span class="b">Typescript</span>
                                         <span class="t">Rally</span>
                                         <span class="t">KafKa</span>
@@ -358,7 +359,7 @@
                                     Tata Consultancy Services | Sydney, Australia
                                 </p>
                                 <p class="content">
-                                   <p>Designed and delivered one reusable component for SSO by using PKCE oAuth2 concepts and the same is used to launch external systems from Mobile Banking and Internet banking application. The component orchestrated in the front-end using plain JavaScript to communicate with Identity Provider. This component helped a huge number of customers to access their external file system and reward points swiftly. 
+                                   <p>Designed and delivered one reusable component for SSO by using PKCE oAuth2 concepts and the same is used to launch external systems from Mobile Banking and Internet banking application. The component is orchestrated in the front-end using plain JavaScript to communicate with Identity Provider. This component helped a huge number of customers to access their external file system and reward points swiftly. 
                                 </p>
                             
                                 </p>
@@ -385,7 +386,7 @@
                                     Tata Consultancy Services | Sydney, Australia
                                 </p>
                                 <p class="content">
-                                   <p>Worked in a team to develop a faster experience for mortgage loan customers, the application helped customers to fill their loan application in a limited number of interactions. The application uses React/Redux/Saga architecture in front-end and Nodejs  as a middleware framework.
+                                   <p>Worked in a team to develop a faster experience for mortgage loan customers, the application helped customers to fill their loan applications in a limited number of interactions. The application uses React/Redux/Saga architecture in front-end and Nodejs  as a middleware framework.
 
  
 
@@ -408,7 +409,7 @@
                             <span class="icon ion-ios-calendar "></span>
                             <div class=" content ">
                                 <summary>Aug 2019 - Nov 2019</summary>
-                                <h3>St George Bank - My Every Day Banking</h3>
+                                <h3>St George Bank - My Everyday Banking</h3>
                                 <p>
                                     Tata Consultancy Services | Sydney, Australia
                                 </p>
@@ -438,7 +439,7 @@
                                 <p>Tata Consultancy Services | Melbourne, Australia
                                 </p>
                                 <p class="content">
-                                    <p> One Minute Move is an initiative to deliver a new online experience for new and existing customers who are moving home. It is a web application build on Angular 2 and later upgraded to Angular4. Responsible for integrating Live person chat and ensuring
+                                    <p> One Minute Move is an initiative to deliver a new online experience for new and existing customers who are moving home. It is a web application built on Angular 2 and later upgraded to Angular4. Responsible for integrating Live person chat and ensuring
                                     100% code coverage through unit testing and end-to-end testing.
                                 </p>
                                 </p>
@@ -466,7 +467,7 @@
                                 </p>
                                 <p class="content">
                                     <p>
-                                    TCS.com is the new face of TCS. Website which is built on pure JavaScript to ensure high performance. Created breathtaking CSS animations without using any third party libraries.
+                                    TCS.com is the new face of TCS. The website which is built on pure JavaScript to ensure high performance. Created breathtaking CSS animations without using any third-party libraries.
                                 </p>
                                 </p>
                                 <p class="content">
@@ -487,10 +488,7 @@
                                 </p>
                                 <p class="content">
                                     <p>
-                                    SADAD P2P is a hybrid application rolled out for Saudi Arabian Monetary Agency, which enables customer of any associate bank can transfer money to any other associate bank customer using their phone number. As a solution architect, I was entrusted to
-                                    provide a foolproof banking application with an emphasis in mitigating, finding and resolving security risks related to hybrid applications. Responsibilities also included making contribution towards application architecture,
-                                    conducting discussion with all stakeholders, provide up to date status for all stakeholders, and provide technical support to offshore team. The main challenges faced in this project were security risks in Hybrid applications
-                                    and time-boxed delivery. I have developed Cordova libraries for binary protection, jail break/routed detection, etc
+                                        SADAD P2P is a hybrid application rolled out for the Saudi Arabian Monetary Agency, which enables the customer of any associate bank can transfer money to any other associate bank customer using their phone number. As a solution architect, I was entrusted to provide a foolproof banking application with an emphasis in mitigating, finding, and resolving security risks related to hybrid applications. Responsibilities also included making contributions towards application architecture, conducting discussions with all stakeholders, provide up to date status for all stakeholders, and providing technical support to the offshore team. The main challenges faced in this project were security risks in Hybrid applications and time-boxed delivery. I have developed Cordova libraries for binary protection, jailbreak/routed detection, etc.
                                 </p>
                                 </p>
                                 <p class="content">
@@ -516,10 +514,9 @@
                                 </p>
                                 <p class="content">
                                     <p>
-                                    TCS BaNCS Digital suite is an enterprise wide solution developed in Angular JS that enables bank to give customers the flexibility and convenience of managing their finances anywhere. It consists of both Mobile and Web application and compatible with
-                                    different form factors and platforms. The solution is easily deployable and scalable and caters to retail and corporate banking (focused on small and medium businesses (SMBs)). Researched on various frontend frameworks
-                                    including Backbone.js, ember.js and AngularJs to pick most suitable one for the product. The key responsibilities in this project is to understand complete requirements of hybrid application, provide world class solution,
-                                    implement, and test the application. This product rolled out for multiple customers including Mercantile Bank South Africa, Bank Yahav Israel and First Niagara Bank USA.
+                                        Tata Consultancy Services | Kochi, Kerala
+                                        TCS BaNCS Digital suite is an enterprise-wide solution developed in Angular JS that enables bank to give customers the flexibility and convenience of managing their finances anywhere. It consists of both Mobile and Web application and compatible with different form factors and platforms. The solution is easily deployable and scalable and caters to retail and corporate banking (focused on small and medium businesses (SMBs)). Researched on various frontend frameworks including Backbone.js, ember.js and AngularJs to pick most suitable one for the product. The key responsibilities in this project is to understand the complete requirements of a hybrid application, provide a world-class solution, implement, and test the application. This product rolled out for multiple customers including Mercantile Bank South Africa, Bank Yahav Israel, and First Niagara Bank USA.
+                                        
                                 </p>
                                 </p>
                                 <p class="content">
@@ -542,7 +539,7 @@
                                 <h3>Hy5 Presidio - Module lead</h3>
                                 <p>Tata Consultancy Services | Kochi, Kerala</p>
                                 <p class="content">
-                                    Hy5 Presidio is a Mobile device management tool which is used to track and manage mobile assets in an enterprise. Assigned with leading the team and developing the self service and admin portal. Technology stack includes Bootstrap, jQuery.</p>
+                                    Hy5 Presidio is a Mobile device management tool that is used to track and manage mobile assets in an enterprise. Assigned with leading the team and developing the self-service and admin portal. The technology stack includes Bootstrap and jQuery.
                                 <p class="content">
                                     <i>
                     <span class="f">HTMl 5</span>
@@ -563,8 +560,7 @@
                                 <p>Cabot Technology Solutions Pvt Ltd.| Kochi, Kerala</p>
                                 <p class="content">
                                     <p>
-                                    Fan2Band, a social web marketing solutions that leverages social networks and peer to peer influence to spread brand awareness. As a senior developer assigned with responsibilities for designing architecture and identifying technology stack. Got opportunity
-                                    to develop Facebook application using Facebook mark-up language(FBML).
+                                        Fan2Band is a social web marketing solution that leverages social networks and peer-to-peer influence to spread brand awareness. As a senior developer assigned with responsibilities for designing architecture and identifying technology stack. Got the opportunity to develop the Facebook application using Facebook mark-up language(FBML).
                                 </p> </p>
                                 <p class="content">
                                     <i>
