--- a/index.html
+++ b/index.html
@@ -680,7 +680,8 @@
             </section>
             <section id="contact">
                 <h1><strong>Contact</strong> Info</h1>
-                <div class="pure-g ">
+                <strong class="light">Up on request</a></strong>
+                <!--<div class="pure-g ">
                     <div class="pure-u-1-2 pure-u-md-1-2 pure-u-lg-1-2 ">
                         <div class="l-box">
                             <span class="icon ion-ios-location "></span>
@@ -702,7 +703,7 @@
                            
                         </div>
                     </div>
-                </div>
+                </div>-->
             </section>
            
             <section class="only-print">
