--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class="copyright">
-                @2022 MujeebRahman - all rights reserved
+                @2023 MujeebRahman - all rights reserved
             </div>
         </div>
     </nav>
@@ -70,6 +70,8 @@
             <div class="title">
                 <h1>Mujeeb Rahman Melevilakkathil</h1>
                 <summary>Senior full stack developer | Front-end dev lead | Solution designer</summary>
+                <div>Location: Melbourne</div>
+                <div class="button-container">
                 <div class="button-container">
                     <button onclick="window.open('assets/docs/Mujeeb_Rahman_MV.pdf')">Download</button>
                 </div>
@@ -83,7 +85,7 @@
                 <div class="pure-g">
                     <div class="pure-u-1">
                         <div class="l-box">
-                            A creative technology enthusiast and Senior Full Stack developer with more than 14 years of experience in creating Hybrid Apps and pixel perfect websites. I derive great joy in learning new technologies and providing solutions. I am seeking new challenging
+                            A creative technology enthusiast and Senior Full Stack developer with more than 15 years of experience in creating Hybrid Apps and pixel perfect websites. I derive great joy in learning new technologies and providing solutions. I am seeking new challenging
                             opportunities, especially in web technologies that will enable me to acquire new skills.
                         </div>
                     </div>
@@ -97,7 +99,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> 14+ years of experience in Web/Mobile application development using HTML/CSS/JavaScript.
+                                <strong> 15+ years of experience in Web/Mobile application development using HTML/CSS/JavaScript.
 
 </strong>
                             </div>
@@ -106,7 +108,7 @@
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
                                 <strong>
-                                    9+ years of experience in SPA development using JavaScript frameworks/libraries such as jQuery, Angular JS, Angular2/4, Knockout JS, Durandal JS, React JS, Redux.
+                                    10+ years of experience in SPA development using JavaScript frameworks/libraries such as jQuery, Angular JS, Angular2/4, Knockout JS, Durandal JS, React JS, Redux.
 
 </strong>
                             </div>
@@ -115,7 +117,7 @@
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
                                 <strong>
-                                    Experience in designing solutions for Front-end and middleware applications.
+                                    Experience in designing solutions for Front-end, middleware applications and Microservices.
 
 </strong>
                             </div>
@@ -135,7 +137,7 @@
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
                                 <strong>
-                                    Strong working experience in Angular JS and Angular 2/4.
+                                    Strong working experience in Angular JS and Angular.
 
 </strong>
                             </div>
@@ -145,7 +147,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> 6 years of experience in Agile development methodology.
+                                <strong> 7 years of experience in Agile development methodology.
 
 </strong>
                             </div>
@@ -181,7 +183,7 @@
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 40%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-javascript"></span> ReactJS/Redux - <strong style="color:#f70054">1 year</strong></div>
+                            <div class="title"><span class="ion-social-javascript"></span> ReactJS - <strong style="color:#f70054">2 years</strong></div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 75%"></div>
                             </div>
@@ -272,7 +274,7 @@
                                 <div class="avatar "><span class=" ion-bowtie"></span></div>
                                
                                 <p><strong>Accenture</strong>
-                                    <br><span class="light"> Advanced App Engineering Assoc Manager</span>
+                                    <br><span class="light"> Software Prod & Plat Eng Manager | Solution Designer</span>
                                     <br><span class="light">Aug 2021 - CURRENT | Sydney</span>
                                 </p>
                             </div>
