--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 <div class="pure-g">
                     <div class="pure-u-1">
                         <div class="l-box">
-                            A creative technology enthusiast and Senior Full Stack developer with more than 15 years of experience in creating Hybrid Apps and pixel perfect websites. I derive great joy in learning new technologies and providing solutions. I am seeking new challenging
-                            opportunities, especially in web technologies that will enable me to acquire new skills.
+                           A creative technology enthusiast and Solution designer with more than 16 years of experience in providing end-to-end solutions for different projects and developing Hybrid Apps and pixel-perfect websites. I derive great joy in learning new technologies and providing solutions. I am seeking new challenging opportunities, especially in web technologies that will enable me to acquire new skills.
+
                         </div>
                     </div>
                 </div>
