--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <div class="l-box">
                             <span class="icon ion-trophy "></span>
                             <div class=" content ">
-                                <strong> 7 years of experience in Agile development methodology.
+                                <strong> 8 years of experience in Agile development methodology.
 
 </strong>
                             </div>
@@ -275,7 +275,7 @@
                                
                                 <p><strong>Accenture</strong>
                                     <br><span class="light"> Software Prod & Plat Eng Manager | Solution Designer</span>
-                                    <br><span class="light">Aug 2021 - CURRENT | Sydney</span>
+                                    <br><span class="light">Aug 2021 - CURRENT | Sydney, Melbourne</span>
                                 </p>
                             </div>
                         </div>
@@ -330,7 +330,7 @@
                                 <summary>Sep 2021 -  CURRENT</summary>
                                 <h3>National Australia Bank - Solution designer| Front-end dev lead</h3>
                                 <p>
-                                    Accenture | Sydney, Australia
+                                    Accenture | Sydney, Melbourne, Australia
                                 </p>
                                 <p class="content">
                                    <p>Provided an End-to-End solution for NAB bankers which will help them to create a term deposit account for customers within minutes and a few clicks. The application was a standalone application that can easily be plugged into the banker dashboard.
