--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
         <article>
             <div class="title">
                 <h1>Mujeeb Rahman Melevilakkathil</h1>
-                <summary>Senior full stack developer | Front-end dev lead | Solution designer</summary>
-                <div>Location: Melbourne</div>
+                <summary>Senior full stack developer | Solution designer</summary>
+                
+                <div style="width: 50%; float: left;">Mobile: 0481368010</div>
+                <div style="width: 50%; float: right;">Email: mujeebrahmanmv@gmail.com</div>
                 <div class="button-container">
                 <div class="button-container">
                     <button onclick="window.open('assets/docs/Mujeeb_Rahman_MV.pdf')">Download</button>
@@ -85,7 +87,7 @@
                 <div class="pure-g">
                     <div class="pure-u-1">
                         <div class="l-box">
-                           A creative technology enthusiast and Solution designer with more than 16 years of experience in providing end-to-end solutions for different projects and developing Hybrid Apps and pixel-perfect websites. I derive great joy in learning new technologies and providing solutions. I am seeking new challenging opportunities, especially in web technologies that will enable me to acquire new skills.
+                            With a strong passion for technology and over 16 years of experience, I am dedicated to delivering comprehensive solutions, creating hybrid apps, and designing pixel-perfect websites. I thrive on learning new technologies and overcoming complex challenges. Currently, I’m seeking new opportunities to further enhance my skills and broaden my expertise.
 
                         </div>
                     </div>
